# bn-db

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/00000000000001_roles/: down.sql  up.sql
migrations/00000000000002_users/: down.sql  up.sql
migrations/00000000000003_organizations/: up.sql
migrations/00000000000004_organization_users/: up.sql
migrations/00000000000005_venues/: up.sql
migrations/00000000000006_organization_venues/: up.sql
migrations/00000000000007_artists/: up.sql
migrations/00000000000008_events/: up.sql
migrations/00000000000009_event_artists/: down.sql  up.sql
migrations/00000000000010_orders/: up.sql
migrations/00000000000011_event_histories/: up.sql
migrations/00000000000012_organization_invites/: up.sql
migrations/2018-06-14-113928_create_tables/: up.sql
scripts/: init-test.sh  init.sh  pre-commit.sh
src/: bin.rs  db.rs  lib.rs  models.rs  schema.rs
src/db/: connections.rs  mod.rs  roles.rs
src/models/: artists.rs  event_artists.rs  event_histories.rs  events.rs  mod.rs  orders.rs  organization_invites.rs  organization_users.rs  organization_venues.rs  organizations.rs  roles.rs  users.rs  venues.rs
src/utils/: errors.rs
tests/: common.rs  tests.rs  users.rs
tests/support/: command.rs  database.rs  mod.rs  organization_builder.rs  organization_invite_builder.rs  project.rs  user_builder.rs
tests/unit/: artists.rs  event_artists.rs  event_histories.rs  events.rs  mod.rs  orders.rs  organization_invites.rs  organization_users.rs  (+4 more)
(+2 files in other folders)
