[package]
name = "bigneon_db"
version = "0.1.0"
authors = ["CjS77"]
license = "BSD-3"
repository = "https://github.com/big-neon/bn-db/"
description = "Big Neon database bindings and facade layer"
documentation = "https://github.com/big-neon/docs"

[dependencies]
diesel = { version = "1.3.0", features = ["postgres"] }
dotenv = "0.10"
rand = "0.5.1"