[package]
name = "bigneon_db"
version = "0.1.0"
authors = ["CjS77"]
license = "BSD-3"
repository = "https://github.com/big-neon/bn-db/"
description = "Big Neon database bindings and facade layer"
documentation = "https://github.com/big-neon/docs"

[dependencies]
diesel = { version = "1.3.0", features = ["postgres", "uuid", "chrono"] }
dotenv = "0.10"
rand = "0.5.2"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
chrono = { version = "0.4.3", features = ["serde"] }
argon2rs = "0.2.5"
log = "0.4"
log4rs = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
fake = { version = "1.2.2" }
url = "1.7.0"

[[test]]
name = "tests"
